[project]
name = "chanlun-pro"
version = "1.0.0"
description = "chanlun pro - 加密货币市场分析工具"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "ccxt>=4.4.88",
    "chardet>=5.2.0",
    "czsc>=0.10.0",
    "dbutils>=3.1.1",
    "flask>=3.1.1",
    "flask-login>=0.6.3",
    "gevent>=25.5.1",
    "lark-oapi>=1.4.17",
    "matplotlib>=3.10.3",
    "mytt>=2.9.3",
    "numpy==1.26.4",
    "openai>=1.84.0",
    "pandas==2.1.0",
    "playwright>=1.53.0",
    "prettytable>=3.16.0",
    "pyarrow>=22.0.0",
    "pyecharts==2.0.8",
    "pymysql>=1.1.1",
    "pytest>=8.4.1",
    "redis>=6.2.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "tenacity>=9.1.2",
    "tornado>=6.5.1",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
